# Mini-Ema

./: .env.example  .gitignore  01_basic_response.py  Makefile  README.md  REFACTORING_SUMMARY.md  pyproject.toml
.github/: copilot-instructions.md  gemini.md
.github/workflows/: code-quality.yml  tests.yml
assets/gen_imgs/: README.md
examples/: README.md  advanced_bot_example.py  gemini_bot_example.py
mini_ema/: __init__.py  __main__.py
mini_ema/bot/: __init__.py  bare_gemini_bot.py  base.py  conversation_history.py  gemini_bot.py  pretty_gemini_bot.py  simple_bot.py
mini_ema/ui/: __init__.py  chat_ui.py
scripts/: README.md  generate_character_images.py
tests/: test_conversation_history.py
